# smart-home-app

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  release.yml
app/: cache.py  config.py  dependencies.py  exceptions.py  main.py
app/api/: router.py
app/api/v1/: __init__.py  analytics.py  audit.py  auth.py  automations.py  dashboard.py  devices.py  groups.py  network.py  pages.py  phone.py  schedules.py  settings.py  users.py  weather.py
app/audit/: models.py  repository.py  schemas.py  service.py
app/auth/: jwt.py  password.py  rbac.py  schemas.py
app/db/: session.py  utils.py
app/devices/: models.py  repository.py  schemas.py  service.py  types.py
app/groups/: models.py  repository.py  schemas.py  service.py
app/models/: base.py
app/network/: __init__.py  service.py
app/phone/: __init__.py  service.py
app/providers/: base.py
app/providers/fritz/: adapter.py  discovery.py  exceptions.py  provider.py
app/providers/mock/: provider.py
app/scheduler/: engine.py  models.py  repository.py  schemas.py  service.py  tasks.py
app/templates/: base.html
app/users/: models.py  repository.py  schemas.py  service.py
app/weather/: client.py  models.py  schemas.py  service.py
docker/app/: Dockerfile  entrypoint.sh
docker/nginx/: Dockerfile  nginx.conf
docker/postgres/: init.sql
docs/: api-reference.md  ci-cd.md  deployment.md  development.md  provider-layer.md  release-process.md  roadmap.md
migrations/: env.py
migrations/versions/: 0001_initial_schema.py  0002_devices.py  0003_schedules.py  0004_audit.py  0005_weather.py  0006_groups_favorites.py  0007_deactivate_virtual_group_devices.py  0008_reactivate_third_party_devices.py
scripts/: db_reset.sh  dev_setup.sh  generate_secret.py  run_dev.sh  run_tests.sh
seeds/: run_seeds.py  seed_001_admin_user.py
tests/: conftest.py
tests/fixtures/: fritz_mock_data.json
tests/integration/: test_api_auth.py
tests/unit/: test_auth.py  test_devices.py  test_discovery.py  test_provider_mock.py  test_weather.py
(+22 files in other folders)
