[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "smart-home-app"
version = "0.1.0"
description = "Production-ready smart home web app for FRITZ!Box device control"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"

# ============================================================
# Ruff — linting and formatting
# ============================================================
[tool.ruff]
target-version = "py312"
line-length = 100
src = ["app", "tests", "seeds", "scripts"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
]
ignore = [
    "B008",  # do not perform function calls in default arguments (FastAPI Depends)
    "RUF012", # mutable class attributes (SQLAlchemy mapped columns)
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ============================================================
# mypy — static type checking
# ============================================================
[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["fritzconnection.*", "apscheduler.*", "passlib.*"]
ignore_missing_imports = true

# ============================================================
# pytest
# ============================================================
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "-v",
]

[tool.coverage.run]
source = ["app"]
omit = ["app/templates/*", "app/static/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
